<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thom.projetcaron.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/txt_to_set"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/clean_text"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/reverse_text"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/loading_bar"
            android:layout_gravity="center"
            android:layout_width="380dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="91dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clean" />

            <Button
                android:id="@+id/btn_reverse"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reverse" />

            <Button
                android:id="@+id/btn_compare"
                android:onClick="isPalindrome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/compare" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
